# tsfresh

./: .coverage.Desktop-Oliver.21352.231333  .coverage.Desktop-Oliver.5568.346010  .coverage.tukpro.fritz.box.72160.793146  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGES.rst  Dockerfile  Dockerfile.testing  LICENSE.txt  Makefile  README  README.md  README.rst  dask-requirements  docs-requirements.txt  install_requirements.sh  notebooks-requirements.txt  optional-requirements.txt  pyproject.toml  rdocs-requirements.txt  requirements.txt  requirements_min.txt  setup.cfg  setup.py  test-requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
.github/requirements/: requirements-37.txt  requirements-38.in  requirements-38.txt  requirements-39.txt
.github/workflows/: benchmark.yml  benchmark_default_branch.yml  deploy.yml  stylecheck.yml  test.yml  test_all.yml
binder/: generate_binder_requirements.py  requirements.txt
conda/: deploy.sh
conda/tsfresh/: meta.yaml
dev/bench/: data.js
docs/: Makefile  changes.rst  conf.py  index.rst  license.rst
docs/_static/: theme_override.css
docs/_templates/: module_functions_template.rst
docs/api/: modules.rst  tests.integrations.rst  tests.rst  tests.units.rst  tsfresh.convenience.rst  tsfresh.examples.rst  tsfresh.feature_extraction.rst  tsfresh.feature_selection.rst  tsfresh.rst  tsfresh.scripts.rst  tsfresh.transformers.rst  tsfresh.utilities.rst
docs/images/: rolling_mechanism_drawio_template.xml
docs/text/: data_formats.rst  faq.rst  feature_calculation.rst  feature_extraction_settings.rst  feature_filtering.rst  feature_naming.rst  forecasting.rst  how_to_add_custom_feature.rst  how_to_contribute.rst  introduction.rst  large_data.rst  list_of_features.rst  parallelization.rst  quick_start.rst  rolling.rst  sklearn_transformers.rst  tsfresh_on_a_cluster.rst
issues/205/: tasks.py
notebooks/: 01 Feature Extraction and Selection.ipynb  02 sklearn Pipeline.ipynb  03 Feature Extraction Settings.ipynb  04 Multiclass Selection Example.ipynb  05 Timeseries Forecasting.ipynb  Human Activity Recognition using TSFRESH.ipynb  basic_pipeline_example.ipynb  benjamini-yekutieli.ipynb  compare-runtimes-of-feature-calculators.ipynb  feature_extraction_with_Datetime_index.ipynb  feature_extraction_with_datetime_index.ipynb  friedrich_coefficients.ipynb  human_acitivity_recognition_example.ipynb  human_activity_recognition_example.ipynb  human_activity_recognition_multi_class_example.ipynb  inspect_dft_features.ipynb  perform-PCA-on-extracted-features.ipynb  pipeline.pkl  pipeline_example.ipynb  pipeline_with_two_datasets.ipynb  principal-component-analysis.ipynb  robot_failure_example.ipynb  test_performance_varied_ts_len.ipynb  the-fc_parameters-extraction-dictionary.ipynb  the-settings-dictionary-for-extraction.ipynb  timeseries_forecasting_basic_example.ipynb  timeseries_forecasting_google_stock.ipynb  timeseries_motif_example.ipynb  tsfresh.performance_once.ipynb  visualize-benjamini-yekutieli-procedure.ipynb
notebooks/advanced/: 05 Timeseries Forecasting (multiple ids).ipynb  compare-runtimes-of-feature-calculators.ipynb  friedrich_coefficients.ipynb  visualize-benjamini-yekutieli-procedure.ipynb
notebooks/data/: y_train.txt
notebooks/examples/: 01 Feature Extraction and Selection.ipynb  02 sklearn Pipeline.ipynb  04 Multiclass Selection Example.ipynb  05 Timeseries Forecasting.ipynb  06 tsfresh on tsfresh.ipynb  pipeline.pkl  tsfresh_on_tsfresh.ipynb
scripts/: run_tsfresh.py
tests/: benchmark.py  conftest.py  fixtures.py  test_feature_significance.py  test_notebooks.py  test_relevant_feature_extraction.py
tests/baseline/: tsfresh-0.1.2.py2.data.json.features.transposed.csv  tsfresh-0.3.0.py2.data.json.features.transposed.csv  tsfresh-0.3.1.py3.data.json.features.transposed.csv  tsfresh-0.4.0.py2.data.json.features.transposed.csv  tsfresh-0.4.0.py3.data.json.features.transposed.csv  tsfresh-0.5.0.py2.data.json.features.transposed.csv  tsfresh-0.5.0.py3.data.json.features.transposed.csv  tsfresh-0.6.0.py2.data.json.features.transposed.csv  tsfresh_feature_names.py  tsfresh_features_test.py
tests/examples/: test_driftbif_simulation.py  test_har_dataset.py  test_robot_execution_failures.py
tests/feature_extraction/: test_extraction.py  test_feature_calculations.py  test_motifs.py  test_settings.py  test_ts_features.py
tests/feature_selection/: test_checks.py  test_feature_selectors.py  test_relevance.py  test_selection.py  test_significance_tests.py
tests/integrations/: test_bindings.py  test_feature_extraction.py  test_full_pipeline.py  test_notebooks.py  test_relevant_feature_extraction.py
tests/scripts/: test_performance_once.py  test_performance_varied_ts_len.py
tests/transformers/: test_feature_augmenter.py  test_feature_selector.py  test_full_pipeline.py  test_per_column_imputer.py  test_relevant_feature_augmenter.py  test_relevant_feature_extractor.py
tests/units/: test_feature_significance.py
tests/utilities/: test_dataframe_functions.py  test_string_manipilations.py
tsfresh/: __init__.py  defaults.py
tsfresh/big_fresh/: __init__.py  api_utils.py  app.py  df_utils.py
tsfresh/convenience/: __init__.py  bindings.py  relevant_extraction.py
tsfresh/examples/: __init__.py  driftbif_datasets.py  driftbif_simulation.py  har_dataset.py  robot_execution_failures.py  test_tsfresh_baseline_dataset.py
tsfresh/feature_extraction/: __init__.py  data.py  derive_features_dictionaries.py  engineer_input_timeseries.py  extraction.py  feature_calculators.py  feature_dynamics_interpretation.md  feature_dynamics_tests.py  gen_example_timeseries_data.py  gen_features_dicts_function.py  gen_input_timeseries_function.py  gen_pdf_for_feature_dynamics.py  gen_timeseries_data.py  motifs.py  response.csv  scott_features_on_features_tests.py  scotts_code.py  settings.py  test_data.csv
tsfresh/feature_selection/: __init__.py  benjamini_hochberg_test.py  feature_selector.py  relevance.py  selection.py  settings.py  (+1 more)
(+40 files in other folders)
