[project]
name = "tsfresh"
version = "0.1.0"
description = "tsfresh extracts relevant characteristics from time series"
dependencies = [
	"requests>=2.9.1",
	"numpy >=1.15.1",
	"pandas>=0.25.0",
	"scipy>=1.2.0",
	"statsmodels>=0.13",
	"patsy>=0.4.1",
	"scikit-learn>=0.22.0",
	"tqdm>=4.10.0",
	"dask[dataframe]>=2.9.0",
	"distributed>=2.11.0",
	"stumpy>=1.7.2",
	"cloudpickle",
]

readme = "README.md"
requires-python = ">=3.8,<3.11"

[[project.authors]]
name = "Maximilian Christ"
email = ""

[[project.authors]]
name = "Nils Braun"
email = ""

[[project.authors]]
name = "Julius Neuffer"
email = ""

[[project.authors]]
name = "Andreas W. Kempa-Liehr"
email = ""


[project.optional-dependencies]
test = [
    "pytest-benchmark>=4.0.0",
    "mock>=5.0.1",
    "matplotlib>=3.6.3",
    "seaborn>=0.12.2",
    "ipython>=8.9.0",
    "notebook>=6.5.2",
    "pandas-datareader>=0.10.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=0.5.1",
    "b2luigi>=0.8.2",
]
[build-system]
requires = [ "pdm-pep517>=1.0.0",]
build-backend = "pdm.pep517.api"

[tool.pdm]

[project.license]
text = "MIT"

[tool.pytest.ini_options]
addopts = "--cov tsfresh --cov-report term-missing --verbose  --ignore=__pypackages__"
