[metadata]
name = tsfresh
summary = tsfresh extracts relevant characteristics from time series
author = Maximilian Christ, Nils Braun, Julius Neuffer, Andreas W. Kempa-Liehr
author-email = max.christ@me.com
license = MIT
home-page = https://github.com/blue-yonder/tsfresh
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
python_requires = >= 3.7

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = tsfresh.module:function
# For example:
# console_scripts =
#     fibonacci = tsfresh.skeleton:run
# as well as other entry_points.
console_scripts =
    run_tsfresh = tsfresh.scripts.run_tsfresh:main


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of source and target:
packages =
    tsfresh
# data_files =
#    share/tsfresh_docs = docs/*

[extras]
# Add here additional requirements for extra features, like:
# PDF =
#    ReportLab>=1.2
#    RXP

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov tsfresh --cov-report term-missing
    --verbose
    -n auto

[aliases]
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True
# autodoc_tree_excludes = ...
# Let pbr itself generate the apidoc
# autodoc_index_modules = True
# autodoc_exclude_modules = ...
# Convert warnings to errors
# warnerrors = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
# do not upload the docs as we host them on read-the-docs
with-docs = 0

[pycodestyle]
max-line-length = 120
