# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = tsfresh
summary = tsfresh extracts relevant characteristics from time series
author = Maximilian Christ, Nils Braun, Julius Neuffer, Andreas W. Kempa-Liehr
author_email = max.christ@me.com
license = MIT
home_page = https://github.com/blue-yonder/tsfresh
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development


[options]
packages = find:
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires =
   pyscaffold>=3.3a0,<4
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    requests>=2.9.1
    numpy >=1.15.1
    pandas>=0.25.0
    scipy>=1.14.0;python_version>='3.10'
    scipy>=1.2.0;python_version<'3.10'
    statsmodels>=0.13
    patsy>=0.4.1
    pywavelets
    scikit-learn>=0.22.0
    tqdm>=4.10.0
    stumpy>=1.7.2
    cloudpickle

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >= 3.9

[options.packages.find]
where = .
exclude =
    tests*

[options.extras_require]
dask =
    dask[dataframe]>=2.9.0
    distributed>=2.11.0
matrixprofile =
    matrixprofile>=1.1.10,<2.0.0

docs =
    Sphinx>=6.1.3
    sphinx_rtd_theme>=1.2.0
    b2luigi
    docutils>=0.18.1

# Add here test requirements (semicolon/line-separated)
testing =
    %(dask)s
    pytest>=4.4.0
    pytest-cov>=2.6.1
    pytest-xdist>=1.26.1
    pytest-benchmark>=3.0.0
    mock>=2.0.0
    matplotlib>=2.0.0
    seaborn>=0.7.1
    ipython>=5.3.0
    notebook>=4.4.1
    pandas-datareader>=0.5.0
    pre-commit

[options.entry_points]
console_scripts =
    run_tsfresh = tsfresh.scripts.run_tsfresh:main


[easy_install]
find_links = https://pypi.org/
index_url = https://pypi.org/simple

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
junit_family = xunit2
addopts =
    --cov tsfresh --cov-report term-missing
    --verbose
    #-n auto
testpaths = tests
filterwarnings =

[aliases]
dists = bdist_wheel
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
# Let pbr run sphinx-apidoc
autodoc_tree_index_modules = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
# do not upload the docs as we host them on read-the-docs
with-docs = 0

[pycodestyle]
max-line-length = 120

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = tsfresh

[tox:tox]
# Tox global conifguration options
minversion = 4.0.0
# Which python versions to test for
envlist = py39, py310, py311, py312
# Don't throw an error if a specific version of python is not installed
skip_missing_interpreters = True
# Ensure that tox uses a virtual environment to build a source distribution
isolated_build = True

# Tox configuration options for each version of python
[testenv]
commands =
    # display the python version that tests are being run on
    python -V
    # install package requirements before running tests
    python -m pip install .[testing]
    # run the tests
    python -m pytest tests/
